--- a/notebooks/Bioinformatics_Module03.ipynb
+++ b/notebooks/Bioinformatics_Module03.ipynb
@@ -584,10 +584,22 @@
         "  print(a+b)"
       ],
       "metadata": {
-        "id": "KabZsL5Fy8jJ"
+        "id": "KabZsL5Fy8jJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96bb9b02-e703-47e8-92a6-55b75c0bfb69"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -617,13 +629,27 @@
         "while a <= 3:\n",
         "\n",
         "    print (\"Counting!\" * a)\n",
-        "    #a += 1"
+        "    a += 1"
       ],
       "metadata": {
-        "id": "07YbiCGO4O1w"
+        "id": "07YbiCGO4O1w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "280bf57d-8d3d-4dd2-9848-0e994c750ab8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counting!\n",
+            "Counting!Counting!\n",
+            "Counting!Counting!Counting!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -652,10 +678,24 @@
         "    print (\"Hello\", name)"
       ],
       "metadata": {
-        "id": "-aqaQ5hz70yo"
+        "id": "-aqaQ5hz70yo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00f998f0-32ef-4a51-f838-057ebcfac04e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Alice\n",
+            "Hello Bob\n",
+            "Hello Charley\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -690,9 +730,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RFBXqQNu_E6X",
-        "outputId": "17ea3665-5605-49cb-8207-56ae8b5b34ee"
+        "outputId": "53891fd5-2ee9-46a6-9cfd-cd6ae79ad507"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,12 +763,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "iterations = 30\n",
+        "\n",
+        "for number in range(9,iterations,3):\n",
+        "  print(number)"
+      ],
       "metadata": {
-        "id": "irYTFPO-IRHo"
+        "id": "irYTFPO-IRHo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f45b9340-c350-4a87-e1d4-38a40475f8b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "12\n",
+            "15\n",
+            "18\n",
+            "21\n",
+            "24\n",
+            "27\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -742,13 +805,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# Enter code for Rosalind 3 here:\n"
+        "# Enter code for Rosalind 3 here:\n",
+        "a = int(input(\"enter the value of a\"))\n",
+        "b = int(input(\"enter the value of b\"))\n",
+        "odd = 0\n",
+        "\n",
+        "for number in range(a,b):\n",
+        "  if number%2==1:\n",
+        "    odd += number\n",
+        "print (odd)"
       ],
       "metadata": {
-        "id": "EI7hRtakG90R"
+        "id": "EI7hRtakG90R",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "825dcd3a-1bf1-47e5-d769-065eae033fa7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the value of a4261\n",
+            "enter the value of b8686\n",
+            "14324749\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
