--- a/notebooks/Bioinformatics_Module03.ipynb
+++ b/notebooks/Bioinformatics_Module03.ipynb
@@ -869,15 +869,37 @@
         "\n",
         "    print(data.read())\n",
         "\n",
-        "    #print(data.readline())\n",
+        "    print(data.readline())\n",
         "\n",
-        "    #print(data.readlines())"
+        "    print(data.readlines())"
       ],
       "metadata": {
-        "id": "V5nzHsnULA_n"
+        "id": "V5nzHsnULA_n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d57fad95-7bba-4cff-e5c8-284c38e3670a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "Yes, brave Sir Robin turned about\n",
+            "He was not afraid to die, O brave Sir Robin\n",
+            "And gallantly he chickened out\n",
+            "He was not at all afraid to be killed in nasty ways\n",
+            "Bravely talking to his feet\n",
+            "Brave, brave, brave, brave Sir Robin\n",
+            "He beat a very brave retreat\n",
+            "\n",
+            "\n",
+            "[]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -887,6 +909,84 @@
       "metadata": {
         "id": "GLO6tBYNVzYZ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"practice.txt\",\"r\") as data:\n",
+        "    # Read the entire content of the file\n",
+        "    content = data.read()\n",
+        "    print(\"--- Entire content ---\")\n",
+        "    print(content)\n",
+        "\n",
+        "    # After reading the whole file, the cursor is at the end.\n",
+        "    # To read lines or use other functions, you need to seek back to the beginning or reopen the file.\n",
+        "    data.seek(0)\n",
+        "\n",
+        "    # Read the first line\n",
+        "    first_line = data.readline()\n",
+        "    print(\"\\n--- First line ---\")\n",
+        "    print(first_line)\n",
+        "\n",
+        "    # Read all remaining lines into a list\n",
+        "    remaining_lines = data.readlines()\n",
+        "    print(\"\\n--- Remaining lines ---\")\n",
+        "    print(remaining_lines)\n",
+        "\n",
+        "# The file is automatically closed when exiting the 'with' block\n",
+        "print(\"\\nFile is closed.\")\n",
+        "\n",
+        "# You can also iterate over the file object line by line\n",
+        "print(\"\\n--- Iterating line by line ---\")\n",
+        "with open(\"practice.txt\",\"r\") as data:\n",
+        "    for line in data:\n",
+        "        print(line, end='') # Use end='' to avoid extra newlines"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uPA_oN1PbZfU",
+        "outputId": "667069d4-e980-4365-855a-36cc4b2775e7"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Entire content ---\n",
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "Yes, brave Sir Robin turned about\n",
+            "He was not afraid to die, O brave Sir Robin\n",
+            "And gallantly he chickened out\n",
+            "He was not at all afraid to be killed in nasty ways\n",
+            "Bravely talking to his feet\n",
+            "Brave, brave, brave, brave Sir Robin\n",
+            "He beat a very brave retreat\n",
+            "\n",
+            "\n",
+            "--- First line ---\n",
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "\n",
+            "\n",
+            "--- Remaining lines ---\n",
+            "['Yes, brave Sir Robin turned about\\n', 'He was not afraid to die, O brave Sir Robin\\n', 'And gallantly he chickened out\\n', 'He was not at all afraid to be killed in nasty ways\\n', 'Bravely talking to his feet\\n', 'Brave, brave, brave, brave Sir Robin\\n', 'He beat a very brave retreat\\n']\n",
+            "\n",
+            "File is closed.\n",
+            "\n",
+            "--- Iterating line by line ---\n",
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "Yes, brave Sir Robin turned about\n",
+            "He was not afraid to die, O brave Sir Robin\n",
+            "And gallantly he chickened out\n",
+            "He was not at all afraid to be killed in nasty ways\n",
+            "Bravely talking to his feet\n",
+            "Brave, brave, brave, brave Sir Robin\n",
+            "He beat a very brave retreat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -907,10 +1007,22 @@
         "print (list_of_lines)"
       ],
       "metadata": {
-        "id": "8U5w2qOudDyp"
+        "id": "8U5w2qOudDyp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb7ea48e-5d34-4dea-cb61-d07aad7d8628"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Bravely bold Sir Robin rode forth from Camelot\\n', 'Yes, brave Sir Robin turned about\\n', 'He was not afraid to die, O brave Sir Robin\\n', 'And gallantly he chickened out\\n', 'He was not at all afraid to be killed in nasty ways\\n', 'Bravely talking to his feet\\n', 'Brave, brave, brave, brave Sir Robin\\n', 'He beat a very brave retreat\\n']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -924,13 +1036,40 @@
     {
       "cell_type": "code",
       "source": [
-        "print (\"_\".join())"
+        "with open(\"practice.txt\",\"r\") as data:\n",
+        "\n",
+        "  list_of_lines=data.readlines()\n",
+        "\n",
+        "print (list_of_lines)\n",
+        "\n",
+        "print (\"\".join(list_of_lines))"
       ],
       "metadata": {
-        "id": "XLvFZ9uSeyYH"
+        "id": "XLvFZ9uSeyYH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5698203-bf5b-4182-af58-a6dd553c7915"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Bravely bold Sir Robin rode forth from Camelot\\n', 'Yes, brave Sir Robin turned about\\n', 'He was not afraid to die, O brave Sir Robin\\n', 'And gallantly he chickened out\\n', 'He was not at all afraid to be killed in nasty ways\\n', 'Bravely talking to his feet\\n', 'Brave, brave, brave, brave Sir Robin\\n', 'He beat a very brave retreat\\n']\n",
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "Yes, brave Sir Robin turned about\n",
+            "He was not afraid to die, O brave Sir Robin\n",
+            "And gallantly he chickened out\n",
+            "He was not at all afraid to be killed in nasty ways\n",
+            "Bravely talking to his feet\n",
+            "Brave, brave, brave, brave Sir Robin\n",
+            "He beat a very brave retreat\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -956,13 +1095,41 @@
         "with open(\"practice.txt\",\"r\") as data:\n",
         "\n",
         "  for line in data:\n",
+        "\n",
         "    print (line)"
       ],
       "metadata": {
-        "id": "snY-10pUkMby"
+        "id": "snY-10pUkMby",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1bd6c5d9-37f4-41a3-8cec-55ffcb6a0e65"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bravely bold Sir Robin rode forth from Camelot\n",
+            "\n",
+            "Yes, brave Sir Robin turned about\n",
+            "\n",
+            "He was not afraid to die, O brave Sir Robin\n",
+            "\n",
+            "And gallantly he chickened out\n",
+            "\n",
+            "He was not at all afraid to be killed in nasty ways\n",
+            "\n",
+            "Bravely talking to his feet\n",
+            "\n",
+            "Brave, brave, brave, brave Sir Robin\n",
+            "\n",
+            "He beat a very brave retreat\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -975,12 +1142,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with open(\"rosalind_ini5.txt\",\"r\") as data:\n",
+        "  line_number = 0\n",
+        "  for line in data:\n",
+        "    line_number += 1\n",
+        "    if line_number % 2 == 0:\n",
+        "      print (line)"
+      ],
       "metadata": {
-        "id": "8QR9dRFtltBN"
+        "id": "8QR9dRFtltBN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e89547f-9ea4-459a-ffc9-a5afbb54f623"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Some things in life are bad, they can really make you mad\n",
+            "\n",
+            "Other things just make you swear and curse\n",
+            "\n",
+            "When you're chewing on life's gristle, don't grumble give a whistle\n",
+            "\n",
+            "This will help things turn out for the best\n",
+            "\n",
+            "Always look on the bright side of life\n",
+            "\n",
+            "Always look on the right side of life\n",
+            "\n",
+            "If life seems jolly rotten, there's something you've forgotten\n",
+            "\n",
+            "And that's to laugh and smile and dance and sing\n",
+            "\n",
+            "When you're feeling in the dumps, don't be silly, chumps\n",
+            "\n",
+            "Just purse your lips and whistle, that's the thing\n",
+            "\n",
+            "So, always look on the bright side of death\n",
+            "\n",
+            "Just before you draw your terminal breath\n",
+            "\n",
+            "Life's a counterfeit and when you look at it\n",
+            "\n",
+            "Life's a laugh and death's the joke, it's true\n",
+            "\n",
+            "You see, it's all a show, keep them laughing as you go\n",
+            "\n",
+            "Just remember the last laugh is on you\n",
+            "\n",
+            "Always look on the bright side of life\n",
+            "\n",
+            "And always look on the right side of life\n",
+            "\n",
+            "Always look on the bright side of life\n",
+            "\n",
+            "And always look on the right side of life\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1013,36 +1238,42 @@
       "cell_type": "code",
       "source": [
         "with open(\"practice_5.txt\",\"r\") as data:\n",
+        "  line = data.read()\n",
         "\n",
-        "  line=data.read()\n",
+        "words = line.split()\n",
         "\n",
-        "for word in line.split():\n",
-        "    print (word)"
+        "word_counts = {}\n",
+        "\n",
+        "for word in words:\n",
+        "    if word in word_counts:\n",
+        "        word_counts[word] += 1\n",
+        "    else:\n",
+        "        word_counts[word] = 1\n",
+        "\n",
+        "for word, count in word_counts.items():\n",
+        "    print(f\"{word} {count}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PBjyhwclpKoM",
-        "outputId": "afb464a8-3407-43ec-e091-5e57dd22b646"
+        "outputId": "bea4a40b-a15f-4ab2-a5e8-125b74c557d5"
       },
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "We\n",
-            "tried\n",
-            "list\n",
-            "and\n",
-            "we\n",
-            "tried\n",
-            "dicts\n",
-            "also\n",
-            "we\n",
-            "tried\n",
-            "Zen\n"
+            "We 1\n",
+            "tried 3\n",
+            "list 1\n",
+            "and 1\n",
+            "we 2\n",
+            "dicts 1\n",
+            "also 1\n",
+            "Zen 1\n"
           ]
         }
       ]
@@ -1139,34 +1370,36 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "sequences = {\n",
+        "    \"H.neandertalensis\":\"ACGTCGCTCTGCTA\",\n",
+        "    \"H.sapiens\":\"ACGTCACTCTGCTA\"\n",
+        "    }\n",
         "sequences[\"P.troglodytes\"]=\"ACGTCACTCTCCTA\"\n",
         "\n",
         "sequences.update({\"G.gorilla\":\"ACGTCCTCCTA\", \"H.erectus\":\"ACGTCACTCTGCTA\"})\n",
         "\n",
-        "print (sequences[\"H.sapiens\"])\n",
+        "with open(\"hominid_sequences.fasta\", \"w\") as fasta_file:\n",
+        "    for key, value in sequences.items():\n",
+        "        fasta_file.write(f\">{key}\\n\")\n",
+        "        fasta_file.write(f\"{value}\\n\")\n",
         "\n",
-        "for key,value in sequences.items():\n",
-        "     print (key,value)"
+        "print(\"Fasta file 'hominid_sequences.fasta' created successfully.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b-2XDof4rtP8",
-        "outputId": "1e998098-f26e-4df1-fd79-38816a84ee15"
+        "outputId": "c0dd33bf-3123-4fa9-b810-b5c542a95f7f"
       },
-      "execution_count": null,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ACGTCACTCTGCTA\n",
-            "H.neandertalensis ACGTCGCTCTGCTA\n",
-            "H.sapiens ACGTCACTCTGCTA\n",
-            "P.troglodytes ACGTCACTCTCCTA\n",
-            "G.gorilla ACGTCCTCCTA\n",
-            "H.erectus ACGTCACTCTGCTA\n"
+            "Fasta file 'hominid_sequences.fasta' created successfully.\n"
           ]
         }
       ]
@@ -1182,12 +1415,103 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with open(\"rosalind_ini6.txt\",\"r\") as data:\n",
+        "  line = data.read()\n",
+        "words = line.split()\n",
+        "\n",
+        "ros6 = {}\n",
+        "for word in words:\n",
+        "  if word in ros6:\n",
+        "    ros6[word] += 1\n",
+        "  else:\n",
+        "    ros6[word] = 1\n",
+        "\n",
+        "for word, count in ros6.items():\n",
+        "  print(f\"{word} {count}\")"
+      ],
       "metadata": {
-        "id": "lD3KoTY9wWa7"
+        "id": "lD3KoTY9wWa7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49ab8102-5a66-4c4a-ec78-413a2c1d7710"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "When 1\n",
+            "I 2\n",
+            "find 1\n",
+            "myself 1\n",
+            "in 4\n",
+            "times 1\n",
+            "of 11\n",
+            "trouble 1\n",
+            "Mother 2\n",
+            "Mary 2\n",
+            "comes 2\n",
+            "to 3\n",
+            "me 4\n",
+            "Speaking 3\n",
+            "words 7\n",
+            "wisdom 7\n",
+            "let 30\n",
+            "it 36\n",
+            "be 41\n",
+            "And 3\n",
+            "my 1\n",
+            "hour 1\n",
+            "darkness 1\n",
+            "she 1\n",
+            "is 4\n",
+            "standing 1\n",
+            "right 1\n",
+            "front 1\n",
+            "Let 6\n",
+            "Whisper 4\n",
+            "when 2\n",
+            "the 4\n",
+            "broken 1\n",
+            "hearted 1\n",
+            "people 1\n",
+            "living 1\n",
+            "world 1\n",
+            "agree 1\n",
+            "There 4\n",
+            "will 5\n",
+            "an 4\n",
+            "answer 4\n",
+            "For 1\n",
+            "though 1\n",
+            "they 2\n",
+            "may 1\n",
+            "parted 1\n",
+            "there 2\n",
+            "still 2\n",
+            "a 2\n",
+            "chance 1\n",
+            "that 2\n",
+            "see 1\n",
+            "night 1\n",
+            "cloudy 1\n",
+            "light 1\n",
+            "shines 1\n",
+            "on 1\n",
+            "Shine 1\n",
+            "until 1\n",
+            "tomorrow 1\n",
+            "wake 1\n",
+            "up 1\n",
+            "sound 1\n",
+            "music 1\n",
+            "yeah 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
