--- a/notebooks/Bioinformatics_Module03.ipynb
+++ b/notebooks/Bioinformatics_Module03.ipynb
@@ -142,27 +142,107 @@
     {
       "cell_type": "code",
       "source": [
-        "type(x)"
+        "# Integer\n",
+        "my_integer = 10\n",
+        "print(\"Integer example:\")\n",
+        "print(my_integer)\n",
+        "print(type(my_integer))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# Float\n",
+        "my_float = 10.5\n",
+        "print(\"Float example:\")\n",
+        "print(my_float)\n",
+        "print(type(my_float))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# String\n",
+        "my_string = \"Hello, world!\"\n",
+        "print(\"String example:\")\n",
+        "print(my_string)\n",
+        "print(type(my_string))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# List\n",
+        "my_list = [1, 2, 3, \"a\", \"b\"]\n",
+        "print(\"List example:\")\n",
+        "print(my_list)\n",
+        "print(type(my_list))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# Tuple\n",
+        "my_tuple = (10, 20, 30)\n",
+        "print(\"Tuple example:\")\n",
+        "print(my_tuple)\n",
+        "print(type(my_tuple))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# Dictionary\n",
+        "my_dictionary = {\"name\": \"Alice\", \"age\": 30}\n",
+        "print(\"Dictionary example:\")\n",
+        "print(my_dictionary)\n",
+        "print(type(my_dictionary))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# Boolean\n",
+        "my_boolean = True\n",
+        "print(\"Boolean example:\")\n",
+        "print(my_boolean)\n",
+        "print(type(my_boolean))\n",
+        "print(\"-\" * 20) # Separator\n",
+        "\n",
+        "# Set\n",
+        "my_set = {1, 2, 3, 3, 4} # Sets automatically remove duplicates\n",
+        "print(\"Set example:\")\n",
+        "print(my_set)\n",
+        "print(type(my_set))\n",
+        "print(\"-\" * 20) # Separator"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 144
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ktR75uWIJ0uc",
-        "outputId": "12eb7e99-0734-451a-9a8a-4c46422641b2"
+        "outputId": "f81faa2c-39e5-4ed1-e44a-ad79455ca4c1"
       },
-      "execution_count": 4,
+      "execution_count": 118,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'x' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2652992662.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Integer example:\n",
+            "10\n",
+            "<class 'int'>\n",
+            "--------------------\n",
+            "Float example:\n",
+            "10.5\n",
+            "<class 'float'>\n",
+            "--------------------\n",
+            "String example:\n",
+            "Hello, world!\n",
+            "<class 'str'>\n",
+            "--------------------\n",
+            "List example:\n",
+            "[1, 2, 3, 'a', 'b']\n",
+            "<class 'list'>\n",
+            "--------------------\n",
+            "Tuple example:\n",
+            "(10, 20, 30)\n",
+            "<class 'tuple'>\n",
+            "--------------------\n",
+            "Dictionary example:\n",
+            "{'name': 'Alice', 'age': 30}\n",
+            "<class 'dict'>\n",
+            "--------------------\n",
+            "Boolean example:\n",
+            "True\n",
+            "<class 'bool'>\n",
+            "--------------------\n",
+            "Set example:\n",
+            "{1, 2, 3, 4}\n",
+            "<class 'set'>\n",
+            "--------------------\n"
           ]
         }
       ]
@@ -1418,26 +1498,28 @@
       "source": [
         "with open(\"rosalind_ini6.txt\",\"r\") as data:\n",
         "  line = data.read()\n",
+        "\n",
         "words = line.split()\n",
         "\n",
-        "ros6 = {}\n",
-        "for word in words:\n",
-        "  if word in ros6:\n",
-        "    ros6[word] += 1\n",
-        "  else:\n",
-        "    ros6[word] = 1\n",
+        "word_counts = {}\n",
         "\n",
-        "for word, count in ros6.items():\n",
-        "  print(f\"{word} {count}\")"
+        "for word in words:\n",
+        "    if word in word_counts:\n",
+        "        word_counts[word] += 1\n",
+        "    else:\n",
+        "        word_counts[word] = 1\n",
+        "\n",
+        "for word, count in word_counts.items():\n",
+        "    print(f\"{word} {count}\")"
       ],
       "metadata": {
         "id": "lD3KoTY9wWa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49ab8102-5a66-4c4a-ec78-413a2c1d7710"
+        "outputId": "ccf0a9d3-0102-4de6-c9d5-2f76a62222a6"
       },
-      "execution_count": 117,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,12 +1624,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with open(\"rosalind_dna.txt\",\"r\") as data:\n",
+        "  DNA = data.read()\n",
+        "  print (DNA.count(\"A\"),DNA.count(\"C\"),DNA.count(\"G\"),DNA.count(\"T\"))"
+      ],
       "metadata": {
-        "id": "GlwS14zGxBIC"
+        "id": "GlwS14zGxBIC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b64bccc4-8bcd-4da0-e9f3-aa6a7e07ba1c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "201 205 202 204\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1560,12 +1658,100 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with open(\"rosalind_ini6.txt\",\"r\") as data:\n",
+        "  line = data.read()\n",
+        "\n",
+        "words = line.split()\n",
+        "\n",
+        "new_words = list(set(words))\n",
+        "\n",
+        "for word in new_words:\n",
+        "    count = words.count(word)\n",
+        "    print(f\"{word} {count}\")\n"
+      ],
       "metadata": {
-        "id": "9H_S6jLnzfxR"
+        "id": "9H_S6jLnzfxR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "99433493-30b3-41d5-bc1b-1c23c1393462"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "of 11\n",
+            "find 1\n",
+            "agree 1\n",
+            "light 1\n",
+            "world 1\n",
+            "shines 1\n",
+            "Mary 2\n",
+            "living 1\n",
+            "me 4\n",
+            "For 1\n",
+            "see 1\n",
+            "wisdom 7\n",
+            "times 1\n",
+            "yeah 2\n",
+            "when 2\n",
+            "it 36\n",
+            "in 4\n",
+            "is 4\n",
+            "Mother 2\n",
+            "Let 6\n",
+            "When 1\n",
+            "comes 2\n",
+            "may 1\n",
+            "my 1\n",
+            "chance 1\n",
+            "that 2\n",
+            "darkness 1\n",
+            "will 5\n",
+            "right 1\n",
+            "hour 1\n",
+            "Whisper 4\n",
+            "there 2\n",
+            "on 1\n",
+            "though 1\n",
+            "a 2\n",
+            "night 1\n",
+            "to 3\n",
+            "There 4\n",
+            "still 2\n",
+            "sound 1\n",
+            "standing 1\n",
+            "cloudy 1\n",
+            "tomorrow 1\n",
+            "the 4\n",
+            "an 4\n",
+            "people 1\n",
+            "hearted 1\n",
+            "I 2\n",
+            "up 1\n",
+            "And 3\n",
+            "be 41\n",
+            "front 1\n",
+            "until 1\n",
+            "Shine 1\n",
+            "let 30\n",
+            "she 1\n",
+            "myself 1\n",
+            "music 1\n",
+            "broken 1\n",
+            "parted 1\n",
+            "trouble 1\n",
+            "wake 1\n",
+            "Speaking 3\n",
+            "words 7\n",
+            "they 2\n",
+            "answer 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
