--- a/notebooks/Module04.ipynb
+++ b/notebooks/Module04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMm9uv9WR0Jm4F6JVq//IbJ",
+      "authorship_tag": "ABX9TyOyj5xwtMR7dSZgQ8xJyzCM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "genome = input(\"genome\")\n",
         "skew = 0\n",
         "min_skew = 0\n",
-        "min_positions = []\n",
+        "min_loc = []\n",
         "\n",
         "for i in range (len(genome)):\n",
         "  if genome[i] == 'C':\n",
@@ -217,9 +217,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eNY41M-tc34l",
-        "outputId": "8dfdd5d3-e00b-4c39-8d33-7536db1e45fc"
+        "outputId": "39025ebe-eded-45a9-ac7a-ecb023403f12"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
